fix async tests